# margarine

./: README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
margarine/: config.py  converter.py  plugin.py  rbac_auth.py  rbac_rule_validation.py  test.py
margarine/tests/api/: rbac_base.py
margarine/tests/api/compute/: test_absolute_limits_rbac.py  test_services_rbac.py
margarine/tests/api/image/: test_images_rbac.py
margarine/tests/api/network/: test_networks_rbac.py
margarine/tests/api/volume/: test_volume_create_delete_rbac.py
margarine/tests/unit/: test_rbac_auth.py  test_rbac_rule_validation.py  test_rbac_utils.py
role_out/: README.rst  config.py  converter.py  plugin.py  rbac_auth.py  rbac_exceptions.py  rbac_mixin.py  rbac_roles.yaml  rbac_rule_validation.py  rbac_utils.py  test.py
role_out/tests/api/: rbac_base.py
role_out/tests/api/compute/: test_absolute_limits_rbac.py  test_services_rbac.py
role_out/tests/api/image/: test_images_rbac.py
role_out/tests/api/network/: test_networks_rbac.py
role_out/tests/api/object_storage/: base.py  test_account_bulk_rbac.py
role_out/tests/api/volume/: test_volume_create_delete_rbac.py
role_out/tests/unit/: rbac_roles.yaml  test_rbac_auth.py  test_rbac_rule_validation.py  test_rbac_utils.py
role_out/unit/: test_rbac_auth.py  test_rbac_rule_validation.py  test_rbac_utils.py
