[metadata]
name = role-out
summary = OpenStack RRBAC Policy Testing
description-file =
    README.rst
author = David Purcell
author-email = david.purcell@att.com
home-page = https://github.com/DavidPurcellATT/role_out

[files]
packages =
    role_out

[entry_points]
tempest.test_plugins =
    plugin_name = role_out.plugin:RoleOutPlugin

[pbr]
warnerrors = true
