[metadata]
name = margarine
summary = OpenStack RRBAC Policy Testing
description-file =
    README.rst
author = David Purcell
author-email = david.purcell@att.com
home-page = https://github.com/DavidPurcellATT/margarine

[files]
packages =
    margarine

[entry_points]
tempest.test_plugins =
    plugin_name = margarine.plugin:MargarinePlugin

[pbr]
warnerrors = true
